--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,7 +26,7 @@
             android:id="@+id/logoutBtn" />
 
         <TextView
-            android:text="admin@digital-bulletin.com"
+            android:text="Loading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/viewEmail"
@@ -50,5 +51,11 @@
             android:id="@+id/textView7"
             android:padding="8dp"
             android:textAlignment="center" />
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/lview" />
     </LinearLayout>
+
 </LinearLayout>
