--- a/app/src/main/res/layout/activity_channel_detail.xml
+++ b/app/src/main/res/layout/activity_channel_detail.xml
@@ -49,7 +49,7 @@
             android:id="@+id/lvPost" />
     </LinearLayout>
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabHome"
+        android:id="@+id/adminFAB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
