--- a/app/src/main/res/layout/activity_channel_detail.xml
+++ b/app/src/main/res/layout/activity_channel_detail.xml
@@ -28,6 +28,15 @@
             android:padding="8dp" />
 
         <TextView
+            android:text="Channel ID : "
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/invCode"
+            android:padding="4dp"
+            android:textSize="12sp"
+            android:textAlignment="center" />
+
+        <TextView
             android:text="Loading Description..."
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
